# sdk-ros

./: .gitignore  LICENSE  README.md  renovate.json
abseil_cpp_vendor/: CMakeLists.txt  package.xml
bazelisk_vendor/: CMakeLists.txt  bazelisk_vendorConfig.cmake.in  package.xml
eigen_vendor/: CMakeLists.txt  package.xml
flatbuffers_vendor/: CMakeLists.txt  package.xml
flowstate_credentials_proxy/: LICENSE  README.md  package.xml  setup.cfg  setup.py
flowstate_credentials_proxy/flowstate_credentials_proxy/: __main__.py  auth.py  grpc.py  test_auth.py
flowstate_ros_bridge/: CMakeLists.txt  Dockerfile.service  README.md  flowstate_ros_bridge.manifest.textproto  flowstate_ros_bridge.proto  flowstate_ros_bridge_default_config.pbtxt  package.xml
flowstate_ros_bridge/docs/: diagnostics_ros_bridge.md  robot_state_sensor.md
flowstate_ros_bridge/include/flowstate_ros_bridge/: bridge_interface.hpp  channel_factory.hpp  diagnostics.hpp  executive.hpp  world.hpp
flowstate_ros_bridge/scripts/: build_service_bundle.sh  rviz_http_proxy
flowstate_ros_bridge/src/: channel_factory.cpp  diagnostics.cpp  executive.cpp  flowstate_ros_bridge.cpp  flowstate_ros_bridge.hpp  flowstate_ros_bridge_main.cpp  world.cpp
flowstate_ros_bridge/src/bridges/: diagnostics_bridge.cpp  diagnostics_bridge.hpp  executive_bridge.cpp  executive_bridge.hpp  plugins.xml  world_bridge.cpp  world_bridge.hpp
flowstate_ros_gz_bridge/: CMakeLists.txt  README.md  flowstate_ros_gz_bridge_config.proto  flowstate_ros_gz_bridge_service.manifest.textproto  flowstate_ros_gz_bridge_service_default_config.pbtxt  package.xml
flowstate_ros_gz_bridge/src/: flowstate_ros_gz_bridge.cc  sim_connection.cc  sim_connection.h
generic_action_skill/: CMakeLists.txt  README.md  package.xml
generic_action_skill/generic_action_skill/: generic_action_skill.py
generic_action_skill/src/: generic_action_skill.manifest.textproto  generic_action_skill.proto
grpc_python_vendor/: CMakeLists.txt  package.xml
grpc_python_vendor/cmake/: install_wheels.cmake.in
grpc_python_vendor/hooks/: pythonpath.dsv.in  pythonpath.sh.in
grpc_vendor/: CMakeLists.txt  package.xml
grpc_vendor/cmake/: install_protobuf_wheel.cmake
grpc_vendor/hooks/: pythonpath.dsv.in  pythonpath.sh.in
grpc_vendor/patches/: 001-redirect-system-deps.md  001-redirect-system-deps.patch  002-use-c++20.md  002-use-c++20.patch
grpc_vendor/test/: test_grpc.py  test_grpc_import.py
grpc_vendor/test/proto/: test.proto
gz_cmake_vendor/: CMakeLists.txt  package.xml
gz_math_vendor/: CMakeLists.txt  package.xml
gz_msgs_vendor/: CMakeLists.txt  package.xml
gz_msgs_vendor/patches/: fix_absl_linking.diff
gz_transport_vendor/: CMakeLists.txt  package.xml
gz_utils_vendor/: CMakeLists.txt  package.xml
icon_controller_service_state_node/: CMakeLists.txt  package.xml
icon_controller_service_state_node/include/icon_controller_service_state/: icon_controller_service_state.hpp
icon_controller_service_state_node/src/: icon_controller_service_state.cpp  service_state_node_main.cpp
icon_controller_service_state_node/test/: service_state_test.cpp
icon_hwm_controller/: CMakeLists.txt  Dockerfile  Dockerfile.base  build_container.sh  icon_hwm_controller.xml  package.xml  testing.cpp
icon_hwm_controller/cmake/: dependencies.cmake  hwm_flatbuffers.cmake
icon_hwm_controller/description/: model.sdf  r6bot.urdf
icon_hwm_controller/hwm_fbs/: hardware_module_state.fbs  icon_state.fbs  joint_limits.fbs  transform_types.fbs
icon_hwm_controller/include/: flatbuffer_utils.hpp
icon_hwm_controller/include/icon_hwm_controller/: domain_socket_utils.hpp  icon_hwm_controller.hpp  memory_segment.hpp  segment_header.hpp  shared_memory_manager.hpp  status.hpp  time.hpp
icon_hwm_controller/include/intrinsic/eigenmath/: matchers.hpp  type_checks.hpp  types.hpp
icon_hwm_controller/include/intrinsic/flatbuffers/: fixed_string.hpp  flatbuffer_utils.hpp
icon_hwm_controller/include/intrinsic/hal/: get_hardware_interface.hpp  hardware_interface_handle.hpp  hardware_interface_registry.hpp  hardware_interface_traits.hpp  icon_state_register.hpp  (+8 more)
icon_hwm_controller/src/: binary_futex.cpp  domain_socket_server.cc  domain_socket_server.cpp  domain_socket_utils.cc  domain_socket_utils.cpp  hardware_interface_registry.cc  hardware_interface_registry.cpp  hardware_module_state_utils.cpp  icon_hwm_controller.cpp  icon_hwm_controller_parameters.yaml  icon_state_utils.cc  icon_state_utils.cpp  joint_command_utils.cpp  joint_limits.cc  joint_limits.cpp  joint_limits_utils.cc  joint_limits_utils.cpp  joint_state_utils.cpp  lockstep.cpp  memory_segment.cc  memory_segment.cpp  realtime_clock.cpp  realtime_clock_interface.cpp  remote_trigger_server.cpp  segment_header.cc  segment_header.cpp  segment_info_utils.cc  segment_info_utils.cpp  shared_memory_lockstep.cpp  shared_memory_manager.cc  shared_memory_manager.cpp  thread.cc  thread.cpp  time.cpp  unique_segment_name.cc  unique_segment_name.cpp
icon_hwm_controller/test/: domain_socket_server_test.cpp  domain_socket_utils_test.cc  domain_socket_utils_test.cpp  get_hardware_interface_test.cc  get_hardware_interface_test.cpp  hardware_interface_registry_test.cpp  joint_limits_test.cpp  joint_limits_utils_test.cpp  log_test.cpp  segment_header_test.cc  segment_header_test.cpp  segment_info_utils_test.cc  segment_info_utils_test.cpp  shared_memory_manager_test.cpp  thread_test.cpp
icon_no_absl/: CMakeLists.txt  package.xml
icon_no_absl/icon_no_absl_export/: CMakeLists.txt  bazel_to_cmake.py  dependencies.json
icon_no_absl/icon_no_absl_export/eigenmath/: BUILD  targets.cmake  types.h
icon_no_absl/icon_no_absl_export/flatbuffer_definitions/: targets.cmake
icon_no_absl/icon_no_absl_export_working/: CMakeLists.txt  bazel_to_cmake.py  dependencies.json  test_cmake.sh
icon_no_absl/icon_no_absl_export_working/eigenmath/: targets.cmake
icon_no_absl/icon_no_absl_export_working/flatbuffer_definitions/: hardware_module_state_generated.h  targets.cmake  transform_types_generated.h
intrinsic_pybind11_vendor/: CMakeLists.txt  package.xml
(+349 files in other folders)
