<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>bazelisk_vendor</name>
  <version>0.1.0</version>
  <description>
    Wrapper to provide the right bazelisk binary for the OS you're on.
  </description>

  <maintainer email="wjwwood@intrinsic.ai">William Woodall</maintainer>

  <license>Apache-2.0</license>  <!-- The bazelisk project is also Apache-2.0 -->

  <author email="wjwwood@intrinsic.ai">William Woodall</author>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
