<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>eigen_vendor</name>
  <version>0.1.0</version>
  <description>
    Wrapper around eigen.
  </description>

  <maintainer email="wjwwood@intrinsic.ai">William Woodall</maintainer>

  <!-- This package has a custom license -->
  <license>Intrinsic License</license>
  <!-- Eigen is primarily MPL-2.0 -->
  <license>MPL-2.0</license>

  <author email="wjwwood@intrinsic.ai">William Woodall</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
