<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>flatbuffers_vendor</name>
  <version>0.1.0</version>
  <description>
    Wrapper around flatbuffers.
  </description>

  <maintainer email="wjwwood@intrinsic.ai">William Woodall</maintainer>

  <license>Apache-2.0</license>  <!-- The package flatbuffers is also Apache-2.0 -->

  <author email="wjwwood@intrinsic.ai">William Woodall</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
