<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flowstate_ros_bridge</name>
  <version>0.0.1</version>
  <description>A bridge between Flowstate services and ROS applications</description>
  <maintainer email="morganquigley@intrinsic.ai">Morgan Quigley</maintainer>
  <maintainer email="yadunund@intrinsic.ai">Yadunund Vijay</maintainer>
  <license>Intrinsic License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>flowstate_interfaces</depend>
  <depend>grpc_vendor</depend>
  <depend>intrinsic_sdk_cmake</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
