<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flowstate_ros_gz_bridge</name>
  <version>0.0.1</version>
  <description>Version of ROS GZ bridge to bridge with Flowstate Gazebo</description>
  <maintainer email="lucadv@intrinsic.ai">Luca Della Vedova</maintainer>
  <license>Intrinsic License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros_gz_bridge_vendor</depend>
  <depend>intrinsic_sdk_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
