<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>generic_action_skill</name>
  <version>0.0.1</version>
  <description>Generic skill to track ROS actions</description>
  <maintainer email="susc@intrinsic.ai">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>intrinsic_sdk_ros</depend>
  
  <!-- ROS Action/Message Interfaces -->
  <depend>action_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>action_tutorials_interfaces</depend>
  <depend>action_tutorials_cpp</depend>
  
  <!-- System Dependencies -->
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-protobuf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
