<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>grpc_python_vendor</name>
  <version>0.1.0</version>
  <description>
    Wrapper around gRPC for python.
  </description>

  <maintainer email="koonpeng@intrinsic.ai">Teo Koon Peng</maintainer>

  <license>Apache-2.0</license>  <!-- The package grpc is also Apache-2.0 -->

  <author email="koonpeng@intrinsic.ai">Teo Koon Peng</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>python3</build_depend>
  <build_depend>python3-pip</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
