<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz_cmake_vendor</name>
  <version>0.1.0</version>
  <description>
    Wrapper around gz-cmake.
  </description>

  <maintainer email="shameek@intrinsic.ai">Shameek Ganguly</maintainer>

  <!-- This package has a custom license -->
  <license>Intrinsic License</license>
  <!-- Gazebo packages are licensed under Apache-2.0 -->
  <license>Apache-2.0</license>

  <author email="shameek@intrinsic.ai">Shameek Ganguly</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
